--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>What we do</title>
-        
-    </head>
-    <body>
-        <h1>We Repair Broken Vehicles</h1>
-        <p></p> 
 
-        <h1>Sell new Ones </h1>
-        <p></p>
+<head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("button").click(function () {
+                $("div").animate({ left: '250px' });
+            });
+        });
+    </script>
+</head>
 
-        <h1>We Custom Make For Customers</h1>
-        <p></p>
-        
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+<body>
 
-    </body>
+    <button>Start Animation</button>
+
+    <p>By default, all HTML elements have a static position, and cannot be moved. To manipulate the position, remember
+        to first set the CSS position property of the element to relative, fixed, or absolute!</p>
+
+    <div style="background:#98bf21;height:100px;width:100px;position:absolute;"></div>
+
+</body>
+
 </html>
