--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 </head>
 
 <body>
-    <img onmouseover="bigImg(this)" onmouseout="normalImg(this)"  src="ken.jpg" alt="Smiley" width="32" height="32">
+<img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="ken.jpg" alt="Smiley" width="32"
+    height="32">
 
 <p>The function bigImg() is triggered when the user moves the mouse pointer over the image.</p>
 <p>The function normalImg() is triggered when the mouse pointer is moved out of the image.</p>" alt="Smiley" width="32"
