--- a/index.html
+++ b/index.html
@@ -3,17 +3,11 @@
 
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $("button").click(function () {
-                $("div").animate({ left: '250px' });
-            });
-        });
-    </script>
+
 </head>
 
 <body>
-<img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="ken.jpg" alt="Smiley" width="32"
+<img onmouseover="bigImg(this)" onmouseout="normalImg(this)" border="0" src="ken.jpg" alt="ken" width="32"
     height="32">
 
 <p>The function bigImg() is triggered when the user moves the mouse pointer over the image.</p>
