--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             document.getElementById("demo").addEventListener("mouseout", mouseOut);
 
             function mouseOver() {
-                document.getElementById("demo").style.color = "red";
+                document.getElementById("demo").style.color = "orange";
             }
 
             function mouseOut() {
